Lancamentos de Compras

--- a/app/views/layouts/gourmet.html.erb
+++ b/app/views/layouts/gourmet.html.erb
@@ -23,6 +23,7 @@
 			<hr/>
 			<%= link_to 'Produtos',	:controller	=> 'produtos' %><br/>
 			<%= link_to 'Clientes',	:controller	=> 'clientes' %><br/>
+			<%= link_to 'Lançamento de Compras', :controller => 'lancamentos' %><br/>
 			<%= link_to 'Caixa Loja', {:controller => 'loja'}, :popup => ['new_window','height=1100,width=1500'] %><br/>	
 		</div>
 		<div id="pagina">
