--- a/app/views/layouts/gourmet.html.erb
+++ b/app/views/layouts/gourmet.html.erb
@@ -21,10 +21,10 @@
 		<div id="lateral">
 			<a href="http://localhost:3000">Principal</a><br />
 			<hr/>
-			<%= link_to 'Produtos',	:controller	=> 'produtos' %><br/>
-			<%= link_to 'Clientes',	:controller	=> 'clientes' %><br/>
-			<%= link_to 'Lançamento de Compras', :controller => 'lancamentos' %><br/>
-			<%= link_to 'Caixa Loja', {:controller => 'loja'}, :popup => ['new_window','height=1100,width=1500'] %><br/>	
+			<%= link_to 'Produtos',	:controller	=> 'produtos' %><br/></br>
+			<%= link_to 'Clientes',	:controller	=> 'clientes' %><br/></br>
+			<%= link_to 'Compras', :controller => 'lancamento_compras' %><br/></br>
+			<%= link_to 'Caixa Loja', {:controller => 'loja'}, :popup => ['new_window','height=1100,width=1500'] %><br/></br>
 		</div>
 		<div id="pagina">
 			<% if flash[:notice] -%>
